--- a/libsolidity/CMakeLists.txt
+++ b/libsolidity/CMakeLists.txt
@@ -131,6 +131,8 @@ set(sources
 	interface/CompilerStack.cpp
 	interface/CompilerStack.h
 	interface/DebugSettings.h
+	interface/FileReader.cpp
+	interface/FileReader.h
 	interface/ImportRemapper.cpp
 	interface/ImportRemapper.h
 	interface/GasEstimator.cpp
