Exclude external sources in test_antlr_grammar.sh, check_style.sh and check_spell.sh.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,7 +299,7 @@ jobs:
             pip install --user codespell
       - run:
           name: Check spelling
-          command: ~/.local/bin/codespell -S "*.enc,.git,Dockerfile*" -I ./scripts/codespell_whitelist.txt
+          command: ~/.local/bin/codespell --check-filenames -S "*.enc,.git,Dockerfile*,_*" -I ./scripts/codespell_whitelist.txt
 
   chk_docs_examples:
     docker:
